refactor: Order, Menu 그룹 분리